change source commit

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "nodemon": "^1.8.1",
-    "stylus": "^0.53.0"
+    "stylus": "^0.53.0",
+    "x2js": "^2.0.0"
   }
 }
