--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular": "^1.5.0",
     "angular-resource": "^1.5.0",
     "angular-route": "^1.5.0",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "abdmob/x2js": "x2js#^1.2.0"
   }
 }
